#12 - hoangnin - Implement-dashboard